--- a/analyses_sharkmer/Snakefile
+++ b/analyses_sharkmer/Snakefile
@@ -202,15 +202,22 @@ rule compare_histograms:
 
         # Plot
         fig, axs = plt.subplots(len(config["sample"]), 2, figsize=(10, 5 * len(config["sample"])))
+        
+        custom_names = {
+            'Physalia-physalis-Pacific': 'Physalia-Guam',
+            'Nanomia-Pacific': 'Nanomia-California',
+            'Nanomia-bijuga-Atlantic': 'Nanomia-bijuga-North-Carolina',
+        }
 
         for i, this_sample in enumerate(config["sample"]):
             for j, this_kmer in enumerate(target_kmers):
+                sample_name = custom_names.get(this_sample, this_sample)
                 df_sample_kmer = df[(df['sample'] == this_sample) & (df['kmer'] == this_kmer)]
                 axs[i, 0].scatter(np.log10(df_sample_kmer['sharkmer']), np.log10(df_sample_kmer['jellyfish']), alpha=0.5)
                 axs[i, 1].scatter(np.log10(df_sample_kmer['sharkmer']), np.log10(df_sample_kmer['kmc']), alpha=0.5)
 
-                axs[i, 0].set_title(f'{this_sample} - Sharkmer vs Jellyfish')
-                axs[i, 1].set_title(f'{this_sample} - Sharkmer vs KMC')
+                axs[i, 0].set_title(f'{sample_name}')
+                axs[i, 1].set_title(f'{sample_name}')
 
                 axs[i, 0].set_xlabel('Log10(Sharkmer)')
                 axs[i, 1].set_xlabel('Log10(Sharkmer)')
